<resources>
    <string name="app_name">Expense Journal</string>
    <string name="newItemText">New Single Item</string>
    <string name="newShoppingList">New Shopping List</string>
    <string name="name">Name:</string>
    <string name="amount">Amount:</string>
    <string name="description">Description:</string>
    <string name="addItem">Add Item</string>
    <string name="date">Date:</string>
    <string name="expenseDateColumnTitle">DATE</string>
    <string name="expenseTitleColumnTitle">REMARKS</string>
    <string name="expenseAmountColumnTitle">SPENT</string>
    <string name="incomeAmountColumnTitle">AMOUNT</string>
    <string name="shoppingListName">List Name:</string>
    <string name="createList">Create List</string>
    <string name="saveList">Save List</string>
    <string name="addToList">Add Items to your list</string>
    <string name="total">Total</string>
    <string name="totalAmount">0</string>
    <string name="currencySettings">Currency Settings</string>
    <string name="defaultCurrencies">Currency</string>
    <string name="defaultCurrenciesKey">defaultCurrencies</string>
    <string name="defaultCurrenciesSummary">Select your currency</string>
    <string name="customCurrency">Add your a new currency</string>
    <string name="customCurrencyKey">customCurrency</string>
    <string name="customCurrencySummary">Enter just the symbol or ISO code</string>
    <string name="version">Version</string>
    <string name="versionValue">1.0.0</string>
    <string name="developer">Developer</string>
    <string name="nectarMicrosystems">Nectar Microsystems</string>
    <string name="dollar">$</string>
    <string name="addNewCurrency">Add New Currency</string>
    <string name="currencyName">Currency Name</string>
    <string name="currencySign">Enter logo or ISO code e.g ($ or USD)</string>
    <string name="addCurrency">Add Currency</string>
    <string name="blank"></string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="totalSpent">Total Spent:</string>
    <string name="viewItems">View Items</string>
</resources>
