<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TabHost
        android:id="@+id/listExpenseNameTabHost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ScrollView
                    android:id="@+id/tab1"
                    android:orientation="vertical"
                    android:layout_width="300dp"
                    android:layout_height="fill_parent"
                    android:background="#FFFFFF"
                    android:padding="20dp"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <EditText
                            android:id="@+id/shoppingListTitle"
                            android:hint="@string/shoppingListName"
                            android:textColorHint="#CCCCCC"
                            android:textColor="#000000"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginBottom="20dp"
                            />

                        <EditText
                            android:id="@+id/shoppingListDescription"
                            android:hint="@string/description"
                            android:textColorHint="#CCCCCC"
                            android:textColor="#000000"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginBottom="20dp"

                            />

                        <EditText
                            android:id="@+id/shoppingListDate"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date"
                            android:inputType="date"
                            android:textColorHint="#CCCCCC"
                            android:textColor="#000000"
                        />

                        <Button
                            android:id="@+id/createListBtn"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back2"
                            android:text="@string/createList"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:layout_marginTop="20dp"
                        />

                    </LinearLayout>

                </ScrollView>

            </FrameLayout>

        </LinearLayout>

    </TabHost>

</LinearLayout>
