<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <TabHost
        android:id="@+id/listItemDetailsTabHost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ScrollView
                    android:id="@+id/tab1"
                    android:orientation="vertical"
                    android:layout_width="300dp"
                    android:layout_height="fill_parent"
                    android:background="#FFFFFF"
                    android:padding="20dp"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100"
                            android:layout_marginBottom="20dp"
                            >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="30"
                                android:text="@string/name"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                />

                            <TextView
                                android:id="@+id/listItemAddedName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="70"
                                android:text="@string/blank"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100"
                            android:layout_marginBottom="20dp"
                            >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="30"
                                android:text="@string/totalSpent"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                />

                            <TextView
                                android:id="@+id/listItemAddedAmount"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="70"
                                android:text="@string/blank"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100"
                            android:layout_marginBottom="20dp"
                            >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="30"
                                android:text="@string/description"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                />

                            <TextView
                                android:id="@+id/listItemAddedDescrip"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="70"
                                android:text="@string/blank"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100"
                            android:layout_marginBottom="20dp"
                            >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="30"
                                android:text="@string/date"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                />

                            <TextView
                                android:id="@+id/listItemAddedDate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="70"
                                android:text="@string/blank"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2"
                            >

                            <Button
                                android:id="@+id/editListItem"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/back2"
                                android:text="@string/viewItems"
                                android:textColor="#FFFFFF"
                                android:textStyle="bold"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                />

                            <Button
                                android:id="@+id/deleteListItem"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/back2"
                                android:text="@string/delete"
                                android:textColor="#FFFFFF"
                                android:textStyle="bold"
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="5dp"
                                android:layout_weight="1"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </ScrollView>
            </FrameLayout>
        </LinearLayout>

    </TabHost>

</LinearLayout>
